# Prediction-Markets-within-Macroeconomic-Policy

./: .gitignore  .pre-commit-config.yaml  MANIFEST.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_figure1_replication.ipynb  02_liquidity_comparison.ipynb  03_polymarket_comparison.ipynb
paper/sections/: 1_background.md  2_replication.md  3_manipulation_risk.md  4_institutional_pathway.md  5_polymarket_comparison.md  6_macro_policy_implementation.md  6_policy_recommendation.md  7_policy_recommendation.md
src/: event_study.py  forecast_eval.py  kalshi_utils.py  manipulation.py  polymarket_api.py
tests/: test_event_study.py  test_forecast_eval.py  test_manipulation.py
