[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-macro-policy"
version = "0.1.0"
description = "Extending the FEDS 'Kalshi and the Rise of Macro Markets' paper: institutionalization, manipulation risk, and regulated-vs-unregulated signal quality."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "SJ-Jain-Systems" }]
keywords = ["kalshi", "polymarket", "prediction-markets", "macroeconomics", "monetary-policy"]
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "matplotlib>=3.8,<4",
    "scipy>=1.11,<2",
    "requests>=2.31,<3",
    "jupyter>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "nbconvert>=7.0",
    "nbclient>=0.9",
    "ipykernel>=6.0",
    "requests-mock>=1.11",
    "pre-commit>=3.5",
]

[project.urls]
"Source" = "https://github.com/sj-jain-systems/prediction-markets-within-macroeconomic-policy"
"FEDS paper" = "https://doi.org/10.17016/FEDS.2026.010"

# Flat-module layout: the modules live directly under src/ and are imported as
# top-level modules (kalshi_utils, kalshi_api, polymarket_api, forecast_eval,
# manipulation, event_study). After `pip install -e .` this makes those imports
# resolve everywhere, so the `sys.path.append("../src")` shim in the notebooks
# becomes redundant.
[tool.setuptools]
package-dir = { "" = "src" }
py-modules = [
    "kalshi_api",
    "kalshi_utils",
    "polymarket_api",
    "forecast_eval",
    "manipulation",
    "event_study",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B).
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by the formatter, not enforced hard
